--- a/style/preset.css
+++ b/style/preset.css
@@ -10,4 +10,49 @@
   --font-body:'Open Sans', sans-serif;
   --font-reg:400;
   --font-bold:600;
+
+  /* padding */
+  --padding: 3rem;
+}
+
+
+/* container */
+ .container{ 
+  padding-right: var(--padding);
+  padding-left: var(--padding);
+  margin-right: auto;
+  margin-left: auto;
+}
+
+/* small screen */
+@media all and (min-width:768px){
+
+  .container{
+    width:750px;
+  }
+}
+
+/* medium*/
+@media all and (min-width:992px){
+
+  .container{
+    width:970px;
+  }
+}
+
+/* large */
+@media all and (min-width:1200px){
+
+  .container{
+    width:1170px;
+  }
+
+  
+/* extra large */
+@media all and (min-width:1400px){
+
+  .container{
+    width:1320px;
+  }
+}
 }
